--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport"
      content="width=device-width,
      initial-scale=1.0">
-        <title><strong>Happy Birthday Sharon!</strong></title>
+        <title><strong>Happy Birthday!</strong></title>
         <link rel="stylesheet"
         href="style.css">
         </head>
