--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-     <meta charset="UTF-8">
-     <meta name="viewport"
-     content="width=device-width,
-     initial-scale=1.0">
-        <title><strong>Happy Birthday!</strong></title>
-        <link rel="stylesheet"
-        href="style.css">
-        </head>
-        <body>
-            <div class="container">
-                <h1>🥳 Happy Birthday!🎂</h1>
-                <img src="cake.jpg"
-                alt="Birthday Cake" class="cake">
-                <canvas id="fireworks"></canvas>
-            </div>
-
-            <script src="script.js"></script>
-            <audio id="birthdaySong" autoplay loop>
-                <source src="birthday-song.mp3"
-                type="audio/mpeg">
-            </audio>
-        </body>
-        </html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Birthday!</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1><strong>🥳Happy Birthday!🎂</strong></h1>
+   <div class="birthday-message">
+    May you live to blow many candles!🕯 🕯
+   </div>
+    <img src="https://github.com/brysonmuchiri/birthday-surprise/blob/main/Screenshot%202025-03-30%20132806.png?raw=true" alt="Birthday Cake" class="cake">
+    <button onclick="showBalloons()">Show Balloons</button>
+   <div id="balloonContainer"
+   style="position:absolute; width: 100%; height: 100%; top: 0; left: o; overflow: 
+   hidden;"></div>
+    
+    <canvas id="fireworks"></canvas>
+  </div>
+  <audio id="birthdaySong" autoplay loop>
+    <source src="https://www.boomplay.com/songs/113276784?srModel=WHATSAPP&srList=WEB" type="audio/mpeg">
+  </audio>
+  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@latest/dist/index.umd.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
